--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <body>
-    <div class='ghscard' src='data/thombashi.json'></div>
+    <div class='ghscard' src='examples/data/thombashi.json'></div>
 
-    <script src='js/ghscard.min.js'></script>
+    <script src='examples/js/ghscard.min.js' charset='utf-8'></script>
 </body>
 </html>
